додає неанімовані елементи

--- a/index.html
+++ b/index.html
@@ -98,9 +98,36 @@
                 <div class="container">
                     <h2 class="title do-title">Чим ми займаємося</h2>
                     <ul class="list do-list">
-                        <li><img src="./images/what_we_do1.jpg" width="370" alt="Програмуємо"></li>
-                        <li><img src="./images/what_we_do2.jpg" width="370" alt="Анализуємо"></li>
-                        <li><img src="./images/what_we_do3.jpg" width="370" alt="Малюємо"></li>
+                        <li>
+                            <div class="do-list-thumb">
+                                <img src="./images/what_we_do1.jpg" width="370" alt="Програмуємо">
+                                <div class="do-list-title">
+                                    <p>
+                                        Десктопні додатки
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="do-list-thumb">
+                                <img src="./images/what_we_do2.jpg" width="370" alt="Аналізуємо">
+                                <div class="do-list-title">
+                                    <p>
+                                        Мобільні додатки
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="do-list-thumb">
+                                <img src="./images/what_we_do3.jpg" width="370" alt="Малюємо">
+                                <div class="do-list-title">
+                                    <p>
+                                        Дизайнерські рішення
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </section>
