--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <h1 class="hero-title">
                             Ефективні рішення для </br>вашого бізнесу
                         </h1>
-                        <button type="button" class="btn hero-btn">Замовити послугу</button>
+                        <button type="button" class="btn hero-btn" data-modal-open>Замовити послугу</button>
                 </div>
             </section>
 
@@ -388,6 +388,17 @@
                 </div>
             </div>
         </footer>
+
+        <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+                <button class="modal-close-btn" data-modal-close>
+                    <svg width="18" height="18">
+                        <use href="./images/icons.svg#icon-close-modal"></use>
+                    </svg>
+                </button>                
+            </div>
+        </div>
+        <script src="./js/modal.js"></script>
     </body>
 </html>
     
