--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,13 @@
                     <ul class="list portfolio-list">
                         <li>
                             <a href="#" target="_blank" class="link portfolio-link">
-                                <img src="./images/portfolio/notebook.jpg" width="370" alt="ноутбук" class="portfolio-img">
+                                <div class="portfolio-img-thumb">
+                                    <img src="./images/portfolio/notebook.jpg" width="370" alt="ноутбук" class="portfolio-img">
+                                    <p class="portfolio-img-overlay">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                        вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
                                 <div class="item">
                                     <h2 class="portfolio-item-title">Технокряк</h2>
                                     <p class="portfolio-desc">Веб-сайт</p>
@@ -61,7 +67,13 @@
                         </li>
                         <li>
                             <a href="#" target="_blank" class="link portfolio-link">
-                                <img src="./images/portfolio/basketball.jpg" width="370" alt="баскетбол" class="portfolio-img">
+                                <div class="portfolio-img-thumb">
+                                    <img src="./images/portfolio/basketball.jpg" width="370" alt="баскетбол" class="portfolio-img">
+                                    <p class="portfolio-img-overlay">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                        вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
                                 <div class="item">
                                     <h2 class="portfolio-item-title">Постер New Orlean vs Golden Star</h2>
                                     <p class="portfolio-desc">Дизайн</p>
@@ -70,7 +82,13 @@
                         </li>
                         <li>
                             <a href="#" target="_blank" class="link portfolio-link">
-                                <img src="./images/portfolio/seafood.jpg" width="370" alt="рибка" class="portfolio-img">
+                                <div class="portfolio-img-thumb">
+                                    <img src="./images/portfolio/seafood.jpg" width="370" alt="рибка" class="portfolio-img">
+                                    <p class="portfolio-img-overlay">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                        вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
                                 <div class="item">
                                     <h2 class="portfolio-item-title">Ресторан Seafood</h2>
                                     <p class="portfolio-desc">Додаток</p>
@@ -79,7 +97,13 @@
                         </li>
                         <li>
                             <a href="#" target="_blank" class="link portfolio-link">
-                                <img src="./images/portfolio/headphones.jpg" width="370" alt="навушники" class="portfolio-img">
+                                <div class="portfolio-img-thumb">
+                                    <img src="./images/portfolio/headphones.jpg" width="370" alt="навушники" class="portfolio-img">
+                                    <p class="portfolio-img-overlay">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                        вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
                                 <div class="item">
                                     <h2 class="portfolio-item-title">Проєкт Prime</h2>
                                     <p class="portfolio-desc">Маркетинг</p>
@@ -88,7 +112,13 @@
                         </li>
                         <li>
                             <a href="#" target="_blank" class="link portfolio-link">
-                                <img src="./images/portfolio/boxes.jpg" width="370" alt="коробочки" class="portfolio-img">
+                                <div class="portfolio-img-thumb">
+                                    <img src="./images/portfolio/boxes.jpg" width="370" alt="коробочки" class="portfolio-img">
+                                    <p class="portfolio-img-overlay">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                        вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
                                 <div class="item">
                                     <h2 class="portfolio-item-title">Проєкт Boxes</h2>
                                     <p class="portfolio-desc">Додаток</p>
@@ -97,7 +127,13 @@
                         </li>
                         <li>
                             <a href="#" target="_blank" class="link portfolio-link">
-                                <img src="./images/portfolio/monitor.jpg" width="370" alt="монітор" class="portfolio-img">
+                                <div class="portfolio-img-thumb">
+                                    <img src="./images/portfolio/monitor.jpg" width="370" alt="монітор" class="portfolio-img">
+                                    <p class="portfolio-img-overlay">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                        вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
                                 <div class="item">
                                     <h2 class="portfolio-item-title">Inspiration has no Borders</h2>
                                     <p class="portfolio-desc">Веб-сайт</p>
@@ -106,7 +142,13 @@
                         </li>
                         <li>
                             <a href="#" target="_blank" class="link portfolio-link">
-                                <img src="./images/portfolio/book.jpg" width="370" alt="книга" class="portfolio-img">
+                                <div class="portfolio-img-thumb">
+                                    <img src="./images/portfolio/book.jpg" width="370" alt="книга" class="portfolio-img">
+                                    <p class="portfolio-img-overlay">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                        вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
                                 <div class="item">
                                     <h2 class="portfolio-item-title">Видання Limited Edition</h2>
                                     <p class="portfolio-desc">Дизайн</p>
@@ -115,7 +157,13 @@
                         </li>
                         <li>
                             <a href="#" target="_blank" class="link portfolio-link">
-                                <img src="./images/portfolio/lab.jpg" width="370" alt="ярлик" class="portfolio-img">
+                                <div class="portfolio-img-thumb">
+                                    <img src="./images/portfolio/lab.jpg" width="370" alt="ярлик" class="portfolio-img">
+                                    <p class="portfolio-img-overlay">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                        вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
                                 <div class="item">
                                     <h2 class="portfolio-item-title">Проєкт LAB</h2>
                                     <p class="portfolio-desc">Маркетинг</p>
@@ -124,7 +172,13 @@
                         </li>
                         <li>
                             <a href="#" target="_blank" class="link portfolio-link">
-                                <img src="./images/portfolio/printing.jpg" width="370" alt="ноутбук" class="portfolio-img">
+                                <div class="portfolio-img-thumb">
+                                    <img src="./images/portfolio/printing.jpg" width="370" alt="ноутбук" class="portfolio-img">
+                                    <p class="portfolio-img-overlay">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                        вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
                                 <div class="item">
                                     <h2 class="portfolio-item-title">Growing Business</h2>
                                     <p class="portfolio-desc">Додаток</p>
